--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1499,5 +1499,108 @@ stories:
   state: Oregon
   domain: http://www.thenewsguard.com/
   link: https://www.thenewsguard.com/community/oregon-farm-bureau-hosts-annual-convention-at-salishan-resort/article_a444acee-238f-11ea-b4c2-bfb1ac285ade.html
+images:
+- name: beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
+- name: oldcabin-store.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-3.jpg
+- name: yuma-bank-yuma-bak-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit.jpg
+- name: cargo-ship-cargo-ship-on-sea-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-dali.jpg
+- name: berlinwall-DSC-0084-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-matrix.jpg
+- name: downtown-los-angeles-downtown-la-wols.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-wols.JPG
+- name: nazi-invasion-IMG_7916.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7916.jpg
+- name: old-school-house-old-schoolhouse-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-wols.jpg
+- name: old-school-house-old-schoolhouse-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dark-dali.jpg
+- name: dragon-desert-desert-dragon-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-matrix.jpg
+- name: rockingchair-rockingchair-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-alien-goggles.jpg
+- name: aws-s3-stories-new-art-museum-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-art-museum-light-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-electricity.jpg
+- name: blossombar-colorful-blocks-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-blocks-file-00-00-24-99.jpg
+- name: bluelake-gred-mash-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-00-00.jpg
+- name: copper-circuit-old-remington-typewriter.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-remington-typewriter.jpg
+- name: copper-circuit-graffitti-red-hat-man.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-graffitti-red-hat-man.jpg
+- name: copper-circuit-grain-ship-docking-grass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-grain-ship-docking-grass.jpg
+- name: copper-circuit-japanese-garden-tree.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-japanese-garden-tree.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
+- name: locked-up-steam-lock-up-steam-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purp-paper.jpg
+- name: hollywood-building-hollywood-building-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-alien-goggles.jpg
+- name: window-window-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sunday.jpg
+- name: sand-hand-sand-hand-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-mucha-mult.jpg
+- name: old-door-lock-old-door-lock-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-spagetti-accident.jpg
+- name: store-on-corner-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
+- name: oldcabin-store-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-color.jpg
+- name: stories-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-blue-circuit.jpg
+- name: rockingchair-rockingchair-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-electricity.jpg
+- name: mediterranean-mediterranean.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean.jpg
+- name: fence-mexico-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purple-storm.jpg
+- name: aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
+- name: la-muse-city-vancouver-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-vancouver-clouds.jpg
+- name: liberty-back-statue-liberty-back-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-ww2-dresden.jpg
+- name: cargo-ship-cargo-ship-on-sea-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-rain.jpg
+- name: white-house-lawn-white-house-window-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-spagetti-accident.jpg
+- name: oldcabin-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dali-two.jpg
+- name: amusement-park-amusement-park-2-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-oily-mcoilface.jpg
+- name: window-window-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-internet-numbers.jpg
+- name: yuma-bank-yuma-bak.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak.jpg
+- name: oldhotel-oldhotel-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-ww2-color.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purp-paper.jpg
+- name: stories-solidies-planning-attack-blue-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-solidies-planning-attack-blue-matrix.jpg
+- name: border-fence-border-fence-on-hill-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smoking-cigarette.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-monet-one.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-monet-one.png
+- name: store-on-corner-oldcabin-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-umberto-bocc.jpg
+- name: fence-fence-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-plentiful.jpg
+- name: aws-s3-stories-shipping-energy-trucking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-shipping-energy-trucking.jpg
+- name: liberty-back-statue-liberty-back-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-cinnamon-rolls.jpg
+- name: subway-subway-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-monet-one.jpg
 ---
 Buckingham To Serve As Special Judge To Fill Nickell Vacancy.&nbsp;Amazon Prime Da Acceso Con Descuento A Personas Que Reciben Ayuda Del Gobierno.&nbsp;Washington State Lawmaker Accused Of 'domestic Terrorism'.&nbsp;Warriors Wildcats Ice Hockey.&nbsp;Bridges Shouldn't Have To Sink To Be Replaced.&nbsp;Plastic Products Company Coming To Kershaw County.&nbsp;Great Jumping Snow Fleas!.&nbsp;Hickson, Calvert Lead Liberty Past Ga Southern In Cure Bowl.&nbsp;
